fix: align Logo to middle of Screen

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
 
 .App-loader {
   background: #5050d2;
-  padding-top: 25%;
+  padding-top: 20%;
   text-align: center;
 }
 
